Fix list on mobile view.
The list produces extra space which generates a horizontal scrollbar.

--- a/plonetheme/blueberry/scss/site/typography.scss
+++ b/plonetheme/blueberry/scss/site/typography.scss
@@ -49,7 +49,7 @@ p {
     li {
       position: relative;
       left: $margin-horizontal;
-      padding-right: $margin-horizontal;
+      margin-right: $margin-horizontal;
     }
 }
 
